--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="container">
         <header class="header">
             <nav>
-                <div class="logo"><img src="images/Logo.svg"></div>
+                <div class="logo"><img src="https://raw.githubusercontent.com/mallhaas/Beetroot-Academy---Exam-2-JS-/fb0ac7b3ff40c38ad56f1d18bf60e5ab64950f45/images/Logo.svg"></div>
                 <div class="navbar">
                     <div class="navbar_item" id="navbar-item1"><div class="circle"></div><a href="#do">About Us</a></div>
                     <div class="navbar_item"><div class="circle"></div><a href="#gallery">Projects</a></div>
@@ -28,9 +28,9 @@
                     <div class="navbar_item"><div class="circle"></div><a href="#contact">Contact</a></div>
                 </div>
                 <div class="icons">
-                    <div><img src="images/facebook.svg"></div>
-                    <div><img src="images/twitter.svg"></div>
-                    <div><img src="images/instgram.svg"></div>
+                    <div><img src="https://raw.githubusercontent.com/mallhaas/Beetroot-Academy---Exam-2-JS-/fb0ac7b3ff40c38ad56f1d18bf60e5ab64950f45/images/facebook.svg"></div>
+                    <div><img src="ihttps://raw.githubusercontent.com/mallhaas/Beetroot-Academy---Exam-2-JS-/fb0ac7b3ff40c38ad56f1d18bf60e5ab64950f45/images/twitter.svg"></div>
+                    <div><img src="https://raw.githubusercontent.com/mallhaas/Beetroot-Academy---Exam-2-JS-/fb0ac7b3ff40c38ad56f1d18bf60e5ab64950f45/images/instgram.svg"></div>
                 </div>
             </nav>
             <div class="header_title">
@@ -51,7 +51,7 @@
             <div class="do" id="scroll">
                 <div class="do_title"><div class="line"></div><h1>WHAT WE DO</h1></div>
                 <div class="do_context">
-                    <div class="do_image"><img src="images/do.svg"></div>
+                    <div class="do_image"><img src="https://raw.githubusercontent.com/mallhaas/Beetroot-Academy---Exam-2-JS-/fb0ac7b3ff40c38ad56f1d18bf60e5ab64950f45/images/do.svg"></div>
                     <div class="do_text">
                         <h2>ONE WORLD</h2>
                         <h3>TRADE CENTER</h3>
@@ -70,58 +70,58 @@
                         <button class="regular_button">MORE DETAILS</button>
                         <p class="locaton">Hong Kong - 1588 feet</p>
                     </div>              
-                    <div class="commerce_image"><img src="images/commerce.svg"></div>
+                    <div class="commerce_image"><img src="https://raw.githubusercontent.com/mallhaas/Beetroot-Academy---Exam-2-JS-/fb0ac7b3ff40c38ad56f1d18bf60e5ab64950f45/images/commerce.svg"></div>
                 </div>
             </div>
             <div class="news" id="news">
                 <div class="news_title"><div class="news_line"></div><h2>LATEST NEWS</h2></div>
                 <div class="news_sildes">
                     <div class="slide">
-                        <img src="images/news-slide1.svg">
+                        <img src="https://raw.githubusercontent.com/mallhaas/Beetroot-Academy---Exam-2-JS-/fb0ac7b3ff40c38ad56f1d18bf60e5ab64950f45/images/news-slide1.svg">
                         <div class="news_slides-text">
                             <h4>SEE THE UNMATCHED BEAUTY OF THE GREAT.</h4>
                             <p>Free directories: directories are perfect for customers that are searching for...</p>
-                            <img src="images/news-author-slide1.svg">
+                            <img src="https://raw.githubusercontent.com/mallhaas/Beetroot-Academy---Exam-2-JS-/fb0ac7b3ff40c38ad56f1d18bf60e5ab64950f45/images/news-author-slide1.svg">
                         </div>
                     </div>
                     <div class="slide">  
-                        <img src="images/news-slide2.svg">
+                        <img src="https://raw.githubusercontent.com/mallhaas/Beetroot-Academy---Exam-2-JS-/fb0ac7b3ff40c38ad56f1d18bf60e5ab64950f45/images/news-slide2.svg">
                         <div class="news_slides-text">
                             <h4>EFFECTIVE ADVERTISING POINTERS.</h4>
                             <p>Having a home based business is a wonderful asset to your life...</p>
-                            <img src="images/news-author-slide2.svg">
+                            <img src="https://raw.githubusercontent.com/mallhaas/Beetroot-Academy---Exam-2-JS-/fb0ac7b3ff40c38ad56f1d18bf60e5ab64950f45/images/news-author-slide2.svg">
                         </div>
                     </div>
                     <div class="slide">  
-                        <img src="images/news-slide3.svg">
+                        <img src="https://raw.githubusercontent.com/mallhaas/Beetroot-Academy---Exam-2-JS-/fb0ac7b3ff40c38ad56f1d18bf60e5ab64950f45/images/news-slide3.svg">
                         <div class="news_slides-text">
                             <h4>HYPNOTIZE YOURSELF INTO THE GHOST.</h4>
                             <p>There are many things that are important to catalog design...</p>
-                            <img src="images/news-author-slide3.svg">
+                            <img src="https://raw.githubusercontent.com/mallhaas/Beetroot-Academy---Exam-2-JS-/fb0ac7b3ff40c38ad56f1d18bf60e5ab64950f45/images/news-author-slide3.svg">
                         </div>
                     </div>
                     <div class="slide">
-                        <img src="images/news-slide1.svg">
+                        <img src="https://raw.githubusercontent.com/mallhaas/Beetroot-Academy---Exam-2-JS-/fb0ac7b3ff40c38ad56f1d18bf60e5ab64950f45/images/news-slide1.svg">
                         <div class="news_slides-text">
                             <h4>SEE THE UNMATCHED BEAUTY OF THE GREAT.</h4>
                             <p>Free directories: directories are perfect for customers that are searching for...</p>
-                            <img src="images/news-author-slide1.svg">
+                            <img src="https://raw.githubusercontent.com/mallhaas/Beetroot-Academy---Exam-2-JS-/fb0ac7b3ff40c38ad56f1d18bf60e5ab64950f45/images/news-author-slide1.svg">
                         </div>
                     </div>
                     <div class="slide">  
-                        <img src="images/news-slide2.svg">
+                        <img src="https://raw.githubusercontent.com/mallhaas/Beetroot-Academy---Exam-2-JS-/fb0ac7b3ff40c38ad56f1d18bf60e5ab64950f45/images/news-slide2.svg">
                         <div class="news_slides-text">
                             <h4>EFFECTIVE ADVERTISING POINTERS.</h4>
                             <p>Having a home based business is a wonderful asset to your life...</p>
-                            <img src="images/news-author-slide2.svg">
+                            <img src="https://raw.githubusercontent.com/mallhaas/Beetroot-Academy---Exam-2-JS-/fb0ac7b3ff40c38ad56f1d18bf60e5ab64950f45/images/news-author-slide2.svgg">
                         </div>
                     </div>
                     <div class="slide">  
-                        <img src="images/news-slide3.svg">
+                        <img src="https://raw.githubusercontent.com/mallhaas/Beetroot-Academy---Exam-2-JS-/fb0ac7b3ff40c38ad56f1d18bf60e5ab64950f45/images/news-slide3.svg">
                         <div class="news_slides-text">
                             <h4>HYPNOTIZE YOURSELF INTO THE GHOST.</h4>
                             <p>There are many things that are important to catalog design...</p>
-                            <img src="images/news-author-slide3.svg">
+                            <img src="https://raw.githubusercontent.com/mallhaas/Beetroot-Academy---Exam-2-JS-/fb0ac7b3ff40c38ad56f1d18bf60e5ab64950f45/images/news-author-slide3.svg">
                         </div>
                     </div>
                   </div>
@@ -130,11 +130,11 @@
                 <div class="gallery_context">
                     <div class="gallery_title"><div class="gallery_line"></div><h1>GALLERY</h1></div>
                     <div class="gallery_images">
-                        <div class="gallery_images-big"><img src="images/gallery-big.svg"></div>
+                        <div class="gallery_images-big"><img src="https://raw.githubusercontent.com/mallhaas/Beetroot-Academy---Exam-2-JS-/fb0ac7b3ff40c38ad56f1d18bf60e5ab64950f45/images/gallery-big.svg"></div>
                         <div class="gallery_images-small">
-                            <div class="gallery_images-1"><img src="images/gallery-small-topleft.svg"></div>
+                            <div class="gallery_images-1"><img src="https://raw.githubusercontent.com/mallhaas/Beetroot-Academy---Exam-2-JS-/fb0ac7b3ff40c38ad56f1d18bf60e5ab64950f45/images/gallery-small-topleft.svg"></div>
                             <div class="gallery_images-2"><img src="images/gallery-small-topright.svg"></div>
-                            <div class="gallery_images-3"><img src="images/gallery-small-bottomleft.svg"></div>
+                            <div class="gallery_images-3"><img src="https://raw.githubusercontent.com/mallhaas/Beetroot-Academy---Exam-2-JS-/fb0ac7b3ff40c38ad56f1d18bf60e5ab64950f45/images/gallery-small-bottomleft.svg"></div>
                             <div class="gallery_images-4"><img src="images/gallery-small-bottomright.svg"></div>
                         </div>
                     </div>
@@ -163,13 +163,13 @@
                 </div>
                 <div class="footer_bottom-logo">
                     <div class="copyright">
-                        <img src="images/Logo.svg">
+                        <img src="https://raw.githubusercontent.com/mallhaas/Beetroot-Academy---Exam-2-JS-/fb0ac7b3ff40c38ad56f1d18bf60e5ab64950f45/images/Logo.svg">
                         <p>Copyrights © 2020 Montichello</p>
                     </div>
                     <div class="footer_icons">
-                        <div><img src="images/facebook.svg"></div>
-                        <div><img src="images/twitter.svg"></div>
-                        <div><img src="images/instgram.svg"></div>
+                        <div><img src="https://raw.githubusercontent.com/mallhaas/Beetroot-Academy---Exam-2-JS-/fb0ac7b3ff40c38ad56f1d18bf60e5ab64950f45/images/facebook.svg"></div>
+                        <div><img src="ihttps://raw.githubusercontent.com/mallhaas/Beetroot-Academy---Exam-2-JS-/fb0ac7b3ff40c38ad56f1d18bf60e5ab64950f45/images/twitter.svg"></div>
+                        <div><img src="https://raw.githubusercontent.com/mallhaas/Beetroot-Academy---Exam-2-JS-/fb0ac7b3ff40c38ad56f1d18bf60e5ab64950f45/images/instgram.svg"></div>
                     </div>
                 </div>
             </div>
