--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </div>
                 <div class="icons">
                     <div><img src="https://raw.githubusercontent.com/mallhaas/Beetroot-Academy---Exam-2-JS-/fb0ac7b3ff40c38ad56f1d18bf60e5ab64950f45/images/facebook.svg"></div>
-                    <div><img src="ihttps://raw.githubusercontent.com/mallhaas/Beetroot-Academy---Exam-2-JS-/fb0ac7b3ff40c38ad56f1d18bf60e5ab64950f45/images/twitter.svg"></div>
+                    <div><img src="https://raw.githubusercontent.com/mallhaas/Beetroot-Academy---Exam-2-JS-/fb0ac7b3ff40c38ad56f1d18bf60e5ab64950f45/images/twitter.svg"></div>
                     <div><img src="https://raw.githubusercontent.com/mallhaas/Beetroot-Academy---Exam-2-JS-/fb0ac7b3ff40c38ad56f1d18bf60e5ab64950f45/images/instgram.svg"></div>
                 </div>
             </nav>
@@ -168,7 +168,7 @@
                     </div>
                     <div class="footer_icons">
                         <div><img src="https://raw.githubusercontent.com/mallhaas/Beetroot-Academy---Exam-2-JS-/fb0ac7b3ff40c38ad56f1d18bf60e5ab64950f45/images/facebook.svg"></div>
-                        <div><img src="ihttps://raw.githubusercontent.com/mallhaas/Beetroot-Academy---Exam-2-JS-/fb0ac7b3ff40c38ad56f1d18bf60e5ab64950f45/images/twitter.svg"></div>
+                        <div><img src="https://raw.githubusercontent.com/mallhaas/Beetroot-Academy---Exam-2-JS-/fb0ac7b3ff40c38ad56f1d18bf60e5ab64950f45/images/twitter.svg"></div>
                         <div><img src="https://raw.githubusercontent.com/mallhaas/Beetroot-Academy---Exam-2-JS-/fb0ac7b3ff40c38ad56f1d18bf60e5ab64950f45/images/instgram.svg"></div>
                     </div>
                 </div>
