--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                         <div class="news_slides-text">
                             <h4>EFFECTIVE ADVERTISING POINTERS.</h4>
                             <p>Having a home based business is a wonderful asset to your life...</p>
-                            <img src="https://raw.githubusercontent.com/mallhaas/Beetroot-Academy---Exam-2-JS-/fb0ac7b3ff40c38ad56f1d18bf60e5ab64950f45/images/news-author-slide2.svgg">
+                            <img src="https://raw.githubusercontent.com/mallhaas/Beetroot-Academy---Exam-2-JS-/fb0ac7b3ff40c38ad56f1d18bf60e5ab64950f45/images/news-author-slide2.svg">
                         </div>
                     </div>
                     <div class="slide">  
